fix the registration
