# 3rd/swagger/cyrest.json
@@ -12,34 +12,47 @@
 			},
 			"type": "object"
 		},
-		"user_registrationPayload": {
+		"user_corporation": {
 			"properties": {
-				"cellphone": {
-					"type": "string"
-				},
 				"company_name": {
 					"type": "string"
 				},
-				"email": {
+				"phone": {
+					"type": "string"
+				}
+			},
+			"type": "object"
+		},
+		"user_personal": {
+			"properties": {
+				"cellphone": {
 					"type": "string"
 				},
 				"first_name": {
 					"type": "string"
 				},
 				"gender": {
-					"type": "integer"
+					"type": "string"
 				},
 				"last_name": {
+					"type": "string"
+				}
+			},
+			"type": "object"
+		},
+		"user_registrationPayload": {
+			"properties": {
+				"corporation": {
+					"$ref": "#/definitions/user_corporation"
+				},
+				"email": {
 					"type": "string"
 				},
 				"password": {
 					"type": "string"
 				},
 				"personal": {
-					"type": "boolean"
-				},
-				"phone": {
-					"type": "string"
+					"$ref": "#/definitions/user_personal"
 				},
 				"source": {
 					"type": "string"
@@ -49,10 +62,10 @@
 		},
 		"user_responseLoginOK": {
 			"properties": {
-				"Accesstoken": {
+				"email": {
 					"type": "string"
 				},
-				"email": {
+				"token": {
 					"type": "string"
 				},
 				"user_id": {
